@@ -209,13 +209,15 @@ if (test "x$enable_executables" = "xyes"); then
     case $target_alias in
     mingw*)
       TESTS_WITH_GLUT="test1 test5 test6 test7 test8 test9.1 test9.2 test9.3 \
-                       test9.4 test9.5 test9.6 test9.7 test9.8 test10 \
-                       testcontex testfont testmaster testrender"
+                       test9.4 test9.5 test9.6 test9.7 test9.8 test10 test11.1 \
+                       test11.2 test11.3 test11.4 test11.5 test11.6 testcontex \
+                       testfont testmaster testrender"
       ;;
     *)
       TESTS_WITH_GLUT="test1 test2 test3 test5 test6 test7 test8 test9.1 \
                        test9.2 test9.3 test9.4 test9.5 test9.6 test9.7 test9.8 \
-                       test10 testcontex testfont testmaster testrender"
+                       test10 test11.1 test11.2 test11.3 test11.4 test11.5 \
+                       test11.6 testcontex testfont testmaster testrender"
       ;;
     esac
 
